--- a/TS/practice - Snake/package.json
+++ b/TS/practice - Snake/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "part3",
+  "name": "snake",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack server --open"
+    "start": "webpack serve --open"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,14 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.30.2",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
+    "postcss": "^8.4.24",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^8.4.2",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.1.3",
     "webpack": "^5.85.0",
