--- a/Vue/hello_vue3/package.json
+++ b/Vue/hello_vue3/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
