--- a/Vue/hello_vue3/package.json
+++ b/Vue/hello_vue3/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "nanoid": "^5.0.6",
+    "pinia": "^2.1.7",
     "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue": "^3.3.11",
     "vue-router": "^4.3.0"
