--- a/Vue/hello_vue3/package.json
+++ b/Vue/hello_vue3/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "mitt": "^3.0.1",
+    "mockjs": "^1.1.0",
     "nanoid": "^5.0.6",
     "pinia": "^2.1.7",
     "vite-plugin-vue-setup-extend": "^0.4.0",
