--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nanoid": "^4.0.2",
+    "nodemon": "^3.1.4",
     "prop-types": "^15.8.1"
   },
   "devDependencies": {
